# parallel-coding

./: .dockerignore  .env.template  .flake8  .gitignore  BUGFIX_PYTHON313_REPL.md  CHANGELOG.md  CODEX_WORKER_SYSTEM_PROMPT.md  COMPATIBILITY_AUDIT_REPORT.md  CONFIGURATION.md  DEVELOPMENT_POLICY.md  Dockerfile.backend  Dockerfile.frontend  FINAL_DESIGN_SPECIFICATION.md  GENERIC_PROMPT_V6.1_JP.md  GENERIC_PROMPT_V6.1_JP_PART1.md  GENERIC_PROMPT_V6.1_JP_PART2.md  HYBRID_ENGINE_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS.md  INSTALLATION.md  INTEGRATION.md  LICENSE  PARALLELIZATION_USAGE_POLICY.md  QUICK_START.md  README.md  RECURSIVE_ORCHESTRATION_QUICK_START.md  ROADMAP_AUTONOMOUS.md  ROADMAP_CROSS_PROJECT_COMPATIBILITY.md  SESSION_FINAL_HANDOFF_2025_10_24.md  SETUP.md  SYSTEM_FEATURE_INVENTORY.md  WORK_20251030_Test_HelloWorld.md  alembic.ini  autonomous_dev_week1.py  autonomous_executor.py  calculator.py  codex_bg.bat  codex_bg.py  coverage.xml  docker-compose.yml  (+30 more)
.claude/: settings.local.json
alembic/: README  env.py
archive/: SESSION_CONTINUATION_2025_10_24_EVENING.md  SESSION_CONTINUATION_2025_10_24_PART2.md  SESSION_HANDOFF_2025_10_24.md  SESSION_HANDOFF_2025_10_24_E2E_DESIGN.md  SESSION_HANDOFF_2025_10_24_EVENING.md  SESSION_HANDOFF_2025_10_24_WEEK0_COMPLETE.md  SESSION_HANDOFF_MANAGER_AI_WEEK0.md  SESSION_HANDOFF_PHASE2_2_COMPLETE.md  SESSION_HANDOFF_PHASE2_2_FEATURE1.md  SESSION_STATUS_2025_10_24_EVENING.md
codex_tasks/: refactor_dialogue_ws.md  refactor_remaining_c901.md
config/: phase1_execution_config.json
docs/: AI_CONSENSUS_REVIEW_SYSTEM_DESIGN.md  AI_WORK_POLICY.md  API_INTEGRATION_COMPLETION_REPORT.md  API_SPECIFICATION.yaml  API_USAGE_GUIDE.md  APP_TSX_INTEGRATION_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_DECISION_MANAGER_AI.md  CLAUDE_API_MIGRATION_GUIDE.md  CLAUDE_CLI_SETUP.md  CONTRIBUTING.md  DATABASE_SCHEMA_DESIGN.md  DOCKER_DEPLOYMENT_COMPLETION_REPORT.md  ECOSYSTEM_DASHBOARD_ARCHITECTURE.md  ERROR_HANDLING_PROTOCOL.md  ERROR_HANDLING_VERIFICATION.md  FUTURE_ENHANCEMENTS.md  GUI_AUTO_TEST_PROPOSAL.md  HYBRID_ENGINE_GUIDE.md  IMPLEMENTATION_STATUS_REPORT.md  LAUNCHER_GUIDE.md  MANAGER_AI_PROPOSAL.md  METRICS_DASHBOARD_COMPLETION_REPORT.md  MILESTONE_1_3_COMPLETION_REPORT.md  PARALLEL_EXECUTION_IMPLEMENTATION.md  PARALLEL_IMPLEMENTATION_PLAN.md  PERMISSION_SETUP_GUIDE.md  PHASE1_1_FINAL_SUMMARY.md  PHASE1_2_COMPLETION_REPORT.md  PHASE1_3_1_VERIFICATION_REPORT.md  PHASE1_3_COMPLETION_REPORT.md  PHASE1_3_IMPLEMENTATION_PLAN.md  PHASE1_COMPLETION_REPORT.md  (+30 more)
frontend/: README.md  (+5 more)
(+467 files in other folders)
